<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recentComments">최근 댓글 목록</string>
    <string name="replyComment">답글 달기</string>
    <string name="likeComment">좋아요</string>
    <string name="commentInputHint">댓글 내용을 입력하세요</string>
    <string name="sendButtonContentDescription">댓글 등록 버튼</string>
    <string name="myComments">댓글 단 글</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editMyComment">댓글 수정</string>
    <string name="commentEditInputHint">수정할 댓글 내용을 입력하세요</string>
    <string name="apply">등록</string>
    <string name="cancel">취소</string>
    <string name="more">더보기</string>
    <string name="emptyComments">댓글이 없습니다</string>
    <string name="deleteMyComment">댓글 삭제</string>
    <string name="successAddComment">댓글 등록 완료</string>
    <string name="yes">네</string>
    <string name="failedLikeComment">좋아요 처리 오류</string>
    <string name="failedDeleteComment">댓글 삭제 처리 오류</string>
    <string name="requestToDeleteComment">댓글을 삭제하시겠습니까?</string>
    <string name="failedApplyComment">댓글 처리 오류</string>
    <string name="replyHeader"><strong>답글 대상</strong> : </string>
    <string name="appliedComment">등록 완료</string>
    <string name="appliedEditComment">댓글 수정 완료</string>
    <string name="deletedComment">댓글 삭제 완료</string>
    <string name="completedLike">좋아요 처리 완료</string>
    <string name="addAComment">댓글 달기</string>
</resources>
