<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="commentDto"
            type="com.android.mediproject.core.model.comments.CommentDto" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/commentItemView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp">


            <TextView
                android:id="@+id/myNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/editMyComment"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commentInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:scrollbars="vertical"
                app:boxBackgroundColor="#F6F6F6"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/myNameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/commentEditInputHint"
                    android:inputType="textMultiLine|text"
                    android:maxLines="5"
                    android:minLines="1"
                    android:text="@{commentDto.content}"
                    android:textAppearance="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:barrierMargin="4dp"
                app:constraint_referenced_ids="commentInputLayout" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:minWidth="0dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/commentEditButton"
                app:layout_constraintTop_toBottomOf="@id/barrier" />


            <Button
                android:id="@+id/commentEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_search_ai_button"
                android:minWidth="0dp"
                android:text="@string/apply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


</layout>